# giaa

./: .editorconfig  .gitignore  Cargo.toml  README.md  rules.yaml
.github/workflows/: build-app.yaml
common/: Cargo.toml
common/src/: lib.rs
giaa/: Cargo.toml
giaa/src/: actuator.rs  args.rs  artifact.rs  color.rs  converter.rs  error.rs  identifier.rs  log.rs  main.rs  rule_expr.rs  scanner.rs
metadata/: Cargo.toml  artifact_info.yaml
metadata/coordinates/: 1920x1080.yaml
metadata/src/: artifact_info.rs  coordinate.rs  lib.rs  rule.rs
model/: .gitignore  README.md  pyproject.toml
model/scripts/: build_onnx.py
ocr/: Cargo.toml
ocr/src/: lib.rs  ocr.rs  pp_ocr.rs
parser/: Cargo.toml
parser/src/: lib.rs  parse.rs  parser.rs
schema/: Cargo.toml
schema/src/: main.rs
window/: Cargo.toml
window/src/: lib.rs  win_window.rs  window.rs
