[package]
name = "window"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
common = { version = "0.1.0", path = "../common" }
enigo = "0.6.1"
image = "0.25.8"
xcap = "0.7.0"
tracing = "0.1"

[dependencies.windows]
version = "0.61"
features = [
  "Data_Xml_Dom",
  "Win32_Security",
  "Win32_UI_HiDpi",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
]
